エラー解決中

--- a/test/fixtures/picture_comments.yml
+++ b/test/fixtures/picture_comments.yml
@@ -3,9 +3,9 @@
 one:
   commenter: MyString
   body: MyText
-  pictures: one
+  picture: one
 
 two:
   commenter: MyString
   body: MyText
-  pictures: two
+  picture: two
